write about DBFlute repository with adjustments of example

--- a/web/ja/environment/index.html
+++ b/web/ja/environment/index.html
@@ -70,6 +70,13 @@
 		<span class="frm">(通常、ダウンロードやセットアップはツール経由で行うので、手動ダウンロードすることはあまりない)</span>
 	</p>
 	<div class="detailpage"><a href="./newest.html">DBFluteの最新バージョン</a></div>
+
+	<h2 id="repository">リポジトリ <span class="frm">(Github)</span></h2>
+	<p>
+		DBFluteのリポジトリ (Github) について。
+	</p>
+	<div class="detailpage"><a href="./repository.html">DBFluteのリポジトリ (Github)</a></div>
+
 	<h2 id="license">ライセンス</h2>
 	<p>
 		DBFluteが使用するライセンスについて。
