--- a/web/ja/manual/function/ormapper/conditionbean/index.html
+++ b/web/ja/manual/function/ormapper/conditionbean/index.html
@@ -197,6 +197,12 @@
 		</dd>
 	</dl>
 
+	<h2 id="example">ConditionBeanのExample</h2>
+	<p>
+		ConditionBean の Example プロジェクトがありますのでぜひ参考に。
+	</p>
+	<div class="detailpage"><a href="../../../reference/example/index.html#basichotwo">DBFlute Example - 基本的な HowTo</a></div>
+
 	<h2 id="scope">ConditionBeanのスコープ</h2>
 	<p>
 		ConditionBean と 外だしSQL のどちらを使ったらよいのか迷ったら？
