--- a/web/ja/manual/function/ormapper/outsidesql/index.html
+++ b/web/ja/manual/function/ormapper/outsidesql/index.html
@@ -89,11 +89,12 @@
 			</dl>
 		</dd>
 	</dl>
-	<h2 id="example">Exampleのススメ</h2>
+
+	<h2 id="example">外だしSQLのExample</h2>
 	<p>
-		外だしSQLの機能を利用したExample実装があります。Behaviorのテストケースに含まれていますので、そちらのExampleをご覧下さい。
+		外だしSQLの Example プロジェクトがありますのでぜひ参考に。
 	</p>
-	<div class="detailpage"><a href="../behavior/index.html#example">Behavior - Exampleのススメ</a></div>
+	<div class="detailpage"><a href="../../../reference/example/index.html#basichotwo">DBFlute Example - 基本的な HowTo</a></div>
 <!-- __content-end__ --></div></div>
 
 <div id="sidebar">
