--- a/web/ja/manual/function/ormapper/behavior/index.html
+++ b/web/ja/manual/function/ormapper/behavior/index.html
@@ -122,6 +122,12 @@
 			</dl>
 		</dd>
 	</dl>
+
+	<h2 id="example">BehaviorのExample</h2>
+	<p>
+		Behavior の Example プロジェクトがありますのでぜひ参考に。
+	</p>
+	<div class="detailpage"><a href="../../../reference/example/index.html#basichotwo">DBFlute Example - 基本的な HowTo</a></div>
 <!-- __content-end__ --></div></div>
 
 <div id="sidebar">
