add "great thanks" of RemoteApiGen to RemoteApi page

--- a/web/ja/lastaflute/howto/architecture/remoteapicall.html
+++ b/web/ja/lastaflute/howto/architecture/remoteapicall.html
@@ -767,6 +767,10 @@ org.docksidestage
 	</p>
 	<div class="detailpage"><a href="http://video.unext.jp/">U-NEXT＜ユーネクスト＞</a></div>
 	<p>
+		RemoteApiGenは、"LUXAさん" より、コントリビュート頂きました。
+	</p>
+	<div class="detailpage"><a href="https://luxa.jp/">LUXA (ルクサ)</a></div>
+	<p>
 		ありがとうございます！
 	</p>
 <!-- __content-end__ --></div></div>
