DBFlute Engine: LastaDoc can show public name of JSON

--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -33,6 +33,7 @@
         <div class="new">
           <h3>NEW</h3>
           <ul>
+            <li>DBFlute Engine: LastaDoc can show public name of JSON <span class="frm">*1/16パッチ</span></li>
             <li>DBFlute Engine: ArrangeQuery Doc in SchemaHTML, first version</li>
             <li>DBFlute Runtime: SystemScript, callback for real-time console</li>
             <li>DBFlute Engine: dbfluteBeansTransactionalDataSourcePackage in dependencyInjectionMap for Spring <span class="frm">*前回パッチ</span></li>
