patch DBFlute Engine-1.1.9 2019/01/28

--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -33,7 +33,9 @@
         <div class="new">
           <h3>NEW</h3>
           <ul>
-            <li>DBFlute Engine: can patch engine by upgrade task <span class="frm">*1/27パッチ</span></li>
+            <li>DBFlute Engine: remove SchemaPolicy definition display from check result message <span class="frm">*1/28パッチ</span></li>
+            <li>DBFlute Engine: SchemaPolicyCheck, can use classification([classification-name]) <span class="frm">*1/28パッチ</span></li>
+            <li>DBFlute Engine: can patch engine by upgrade task <span class="frm">*1/28パッチ</span></li>
             <li>DBFlute Engine: LastaDoc can show public name of JSON <span class="frm">*1/16パッチ</span></li>
             <li>DBFlute Engine: ArrangeQuery Doc in SchemaHTML, first version</li>
             <li>DBFlute Runtime: SystemScript, callback for real-time console</li>
