--- a/web/ja/lastaflute/howto/upgrade/lachangelog.html
+++ b/web/ja/lastaflute/howto/upgrade/lachangelog.html
@@ -29,6 +29,25 @@
 	${indexlist}
 
       <div class="release">
+        <h2>LastaFlute-1.1.1</h2>
+        <p class="releas5date">2019/02/03</p>
+        <div class="new">
+          <h3>NEW</h3>
+          <ul>
+            <li>make JsonMappingOption@filterTypeableTextReading()</li>
+            <li>make JsonResponse@swtichJsonEngine() instead of switchMappingOption()</li>
+            <li>handleErrorCause() uses also printStackTrace() for logback failure</li>
+            <li>improve Gson adaptables for overriding by application</li>
+            <li>make JsonManager@newRuledEngine() for more customization</li>
+            <li>make BeanWrapper@getBean() for Lasta Thymeleaf (application extension)</li>
+            <li>[Lasta Di] upgrade Javassist to 3.24.0-GA</li>
+            <li>[Lasta Di] fix resolveSimpleNumber() wrong if-statement (Integer, Long)</li>
+            <li>[LastaDoc.jar] LastaDocでJsonResultをスネークケース表示できるように</li>
+            <li>[LastaDoc.jar] RemoteApiGenでのDELETEメソッド+JSON Body対応</li>
+          </ul>
+        </div>
+      </div>
+      <div class="release">
         <h2>LastaFlute-1.1.0</h2>
         <p class="releas5date">2018/10/11</p>
         <div class="new">
@@ -44,10 +63,10 @@
             <li>update Lasta Di to 0.7.8</li>
             <li>update Hibernate Validator to 6.0.13.Final</li>
             <li>[Lasta Di] setAccessible(true)で落ちた時にどの項目で落ちたかわかるように</li>
-            <li>[Lasta Doc.jar] キャメルケースとスネークケースを変換したときの微調整</li>
-            <li>[Lasta Doc.jar] swagger editorで発生するエラーを無くした</li>
-            <li>[Lasta Doc.jar] swagger ui-3 に対応</li>
-            <li>[UTFlute] update Lasta Doc.jar to 0.3.4</li>
+            <li>[LastaDoc.jar] キャメルケースとスネークケースを変換したときの微調整</li>
+            <li>[LastaDoc.jar] swagger editorで発生するエラーを無くした</li>
+            <li>[LastaDoc.jar] swagger ui-3 に対応</li>
+            <li>[UTFlute] update LastaDoc.jar to 0.3.4</li>
           </ul>
         </div>
       </div>
