--- a/web/ja/lastaflute/howto/upgrade/index.html
+++ b/web/ja/lastaflute/howto/upgrade/index.html
@@ -57,16 +57,16 @@
 		LastaFluteに関連するライブラリの最新バージョンの情報です。
 	</p>
 	<dl class="longvaluemainlist">
-		<dt><a href="../../lastadi/index.html">Lasta Di</a></dt><dd>0.7.8 <span class="frm">(LastaFlute組み込み)</span> <span class="frm">(2018/10/11)</span></dd>
+		<dt><a href="../../lastadi/index.html">Lasta Di</a></dt><dd>0.7.9 <span class="frm">(LastaFlute組み込み)</span> <span class="frm">(2019/02/03)</span></dd>
 		<dt><a href="../architecture/typesafemail.html">MailFlute</a></dt><dd>0.6.0 <span class="frm">(LastaFlute組み込み)</span> <span class="frm">(2018/07/23)</span></dd>
 		<dt><a href="../architecture/jobscheduling.html">LastaJob</a></dt><dd>0.5.3 <span class="frm">(2018/03/03)</span></dd>
-		<dt><a href="../action/lathymeleaf.html">LastaThymeleaf</a></dt><dd>0.3.2 <span class="frm">(2017/11/29)</span></dd>
-		<dt><a href="../architecture/remoteapicall.html">LastaRemoteApi</a></dt><dd>0.4.1 <span class="frm">(2018/04/26)</span></dd>
-		<dt><a href="https://github.com/lastaflute/lasta-doc/">LastaDoc</a></dt><dd>0.3.4 <span class="frm">(2018/10/03)</span></dd>
+		<dt><a href="../action/lathymeleaf.html">LastaThymeleaf</a></dt><dd>0.4.0 <span class="frm">(2019/02/03)</span></dd>
+		<dt><a href="../architecture/remoteapicall.html">LastaRemoteApi</a></dt><dd>0.4.2 <span class="frm">(2019/02/0#)</span></dd>
+		<dt><a href="https://github.com/lastaflute/lasta-doc/">lasta-doc engine</a></dt><dd>0.3.5 <span class="frm">(2019/02/03)</span></dd>
 		<dt><a href="https://github.com/lastaflute/lasta-taglib/">LastaTaglib</a></dt><dd>0.7.3 <span class="frm">(2018/07/26)</span></dd>
 		<dt><a href="https://github.com/dbflute-session/jetty-boot/">JettyBoot</a></dt><dd>0.4.9 <span class="frm">(2017/10/22)</span></dd>
-		<dt><a href="https://github.com/dbflute-session/tomcat-boot/">TomcatBoot</a></dt><dd>0.7.0 <span class="frm">(2018/08/30)</span></dd>
-		<dt><a href="../../../manual/function/helper/utflute/index.html">UTFlute</a></dt><dd>0.8.9 <span class="frm">(2018/10/07)</span></dd>
+		<dt><a href="https://github.com/dbflute-session/tomcat-boot/">TomcatBoot</a></dt><dd>0.7.1 <span class="frm">(2019/02/03)</span></dd>
+		<dt><a href="../../../manual/function/helper/utflute/index.html">UTFlute</a></dt><dd>0.9.0 <span class="frm">(2019/02/03)</span></dd>
 	</dl>
 
 	<h2 id="changelog">ChangeLog</h2>
