--- a/web/ja/lastaflute/howto/upgrade/lachangelog.html
+++ b/web/ja/lastaflute/howto/upgrade/lachangelog.html
@@ -42,8 +42,8 @@
             <li>make BeanWrapper@getBean() for Lasta Thymeleaf (application extension)</li>
             <li>[Lasta Di] upgrade Javassist to 3.24.0-GA</li>
             <li>[Lasta Di] fix resolveSimpleNumber() wrong if-statement (Integer, Long)</li>
-            <li>[LastaDoc.jar] LastaDocでJsonResultをスネークケース表示できるように</li>
-            <li>[LastaDoc.jar] RemoteApiGenでのDELETEメソッド+JSON Body対応</li>
+            <li>[lasta-doc engine] LastaDocでJsonResultをスネークケース表示できるように</li>
+            <li>[lasta-doc engine] RemoteApiGenでのDELETEメソッド+JSON Body対応</li>
           </ul>
         </div>
       </div>
