--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -33,6 +33,9 @@
         <div class="new">
           <h3>NEW</h3>
           <ul>
+            <li>DBFlute Engine: quit FreeGen cls codeOf() deprecated (for internal use) <span class="frm">*2/28パッチ</span></li>
+            <li>DBFlute Engine: FreeGen cls can be isSuppressDBClsCollaboration <span class="frm">*2/28パッチ</span></li>
+            <li>DBFlute Engine: SimpleCDef option as DBFlute Classification <span class="frm">*2/28パッチ</span></li>
             <li>DBFlute Engine: remove SchemaPolicy definition display from check result message <span class="frm">*1/28パッチ</span></li>
             <li>DBFlute Engine: SchemaPolicyCheck, can use classification([classification-name]) <span class="frm">*1/28パッチ</span></li>
             <li>DBFlute Engine: can patch engine by upgrade task <span class="frm">*1/28パッチ</span></li>
