--- a/web/ja/manual/function/ormapper/runtime/callbackcontext.html
+++ b/web/ja/manual/function/ormapper/runtime/callbackcontext.html
@@ -87,8 +87,9 @@ CallbackContext.setBehaviorCommandHookOnThread(<span class="keyword">new</span> 
 		フレームワーク側(外側)で、すでに BehaviorCommandHook を利用しているときでも、アプリ側(内側)で独自の Hook を set することができます。 
 	</p>
 	<p>
-		ただし、clearするとすべて一括でクリアされるので、フレームワーク側(外側)で必ずクリアされるのであれば、アプリ側(内側)ではクリアはしないようにします。
-		<span class="frm">(内側がそれを意識しないといけないというのは、ちょっと良くないですね...フレームワーク側では常にclearするようにしておいて、アプリ側では気にせずsetするというようにすると良いでしょう)</span>
+		ただし、clearするとすべて一括でクリアされるので、もしレイヤごとに段階的に set していくのであれば、フレームワーク側(外側)で必ずクリアされるようにしておいて、アプリ側(内側)ではクリアはしないすると良いでしょう。
+		だがしかし、多重登録できるとはいえ、そもそも CallbackContext の設定箇所は一元管理する方が良いです<span class="frm">(多重登録は単純に部品化のための機能と捉えて)</span>。
+		もしフレームワーク側で利用しているのであれば、アプリでその部分をオーバーライドで拡張して処理を付け足すように実装したほうが良いでしょう。
 	</p>
 
 	<h2 id="bhvcommand">BehaviorCommandHook</h2>
