--- a/web/ja/lastaflute/howto/upgrade/index.html
+++ b/web/ja/lastaflute/howto/upgrade/index.html
@@ -61,7 +61,7 @@
 		<dt><a href="../architecture/typesafemail.html">MailFlute</a></dt><dd>0.6.0 <span class="frm">(LastaFlute組み込み)</span> <span class="frm">(2018/07/23)</span></dd>
 		<dt><a href="../architecture/jobscheduling.html">LastaJob</a></dt><dd>0.5.3 <span class="frm">(2018/03/03)</span></dd>
 		<dt><a href="../action/lathymeleaf.html">LastaThymeleaf</a></dt><dd>0.4.1 <span class="frm">(2019/03/06)</span></dd>
-		<dt><a href="../architecture/remoteapicall.html">LastaRemoteApi</a></dt><dd>0.4.2 <span class="frm">(2019/02/0#)</span></dd>
+		<dt><a href="../architecture/remoteapicall.html">LastaRemoteApi</a></dt><dd>0.4.3 <span class="frm">(2019/03/14)</span></dd>
 		<dt><a href="https://github.com/lastaflute/lasta-doc/">lasta-doc engine</a></dt><dd>0.3.5 <span class="frm">(2019/02/03)</span></dd>
 		<dt><a href="https://github.com/lastaflute/lasta-taglib/">LastaTaglib</a></dt><dd>0.7.3 <span class="frm">(2018/07/26)</span></dd>
 		<dt><a href="https://github.com/dbflute-session/jetty-boot/">JettyBoot</a></dt><dd>0.4.9 <span class="frm">(2017/10/22)</span></dd>
