comment about job-net of LastaJob

--- a/web/ja/lastaflute/howto/architecture/jobscheduling.html
+++ b/web/ja/lastaflute/howto/architecture/jobscheduling.html
@@ -186,6 +186,7 @@ org.docksidestage
 }
 </code></pre>
 	<h3 id="jobnetarekore">NextTrigger (ジョブネット)</h3>
+	<h4>NextTriggerの設定方法</h4>
 	<p>
 		例えば、SeaJob が終わったら(成功したら)、LandJob を実行したい、という場合...
 	</p>
@@ -204,6 +205,7 @@ org.docksidestage
 	<p>
 		triggeredBy() は複数呼び出せば、起動のきっかけのJobを複数設定することもできます。
 	</p>
+	<h4>NextTriggerの細かい挙動</h4>
 	<p>
 		成功というのは、<em class="keyword">例外が発生していないこと</em> を表しています。
 		もし、"例外は発生させたくないけど、とある状況で次のJobを動かしたくない" という場合は、SeaJobの中で分岐させて runtime.suppressNextTrigger()
@@ -213,6 +215,21 @@ org.docksidestage
 		LandJob は cron 設定がされているので、cronで指定された時間が来ても動きます。
 		連動も独立もしています。両方から同時に起動しても二重起動防止の制御は効きます。もし LandJob は、SeaJob
 		からしか呼ばれず、独立して時間起動しないのであれば、LandJob は NonCron で登録すると良いでしょう。
+	</p>
+	<h4>NextTriggerとJob設計</h4>
+	<p>
+		例えば "SeaJobの後にLandJobが呼ばれる" としたときに、SeaJobからLandJobに対して動的な引数を与えることはできません。
+	</p>
+	<p>
+		それぞれのJobは、前後のJob (ジョブネット設定) に依存せず、できるだけ独立的に実行できるようにしておいた方がわかりやすくトラブルも少ないと考えます。
+		どうしても特定の値を受け取るくらいJob間で依存するのであれば、SeaJobに処理をまとめた方が明示的でわかりやすく、引数もコンパイルセーフで扱われます。
+		SeaJobクラスの複雑化を避けたいのであれば、JobAssistなどに切り出せば良いでしょう。
+		LandJobを再利用 (別のJobやスケジュールから実行するなど) するであれば、Logicクラスで再利用すれば良いでしょう。
+	</p>
+	<p>
+		Jobクラスは、簡易な処理はJobクラス自体に実装したりはしますが、あくまでスケジュールや起動タイミングに関するコントローラーであって、それ自体が Logic としてやりくりするものではないと考えています。
+		<span class="frm">(全く別の理由などで、どうしても必要となったときは検討しようかと思います。
+		あり得るとしたら、Jobの設定をDBに保持するなどしてコード修正無しでアプリの再起動なしで完全に動的なジョブネットを構築そして変更したい場合など...)</span>
 	</p>
 
 	<h2 id="howtojob">Jobの実装の仕方</h2>
