--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -28,6 +28,26 @@
 	${indexlist}
 
       <div class="release">
+        <h2>DBFlute-1.2.0 <span class="frm">※Java8</span></h2>
+        <p class="releas5date">2019/04/xx</p>
+        <div class="new">
+          <h3>NEW</h3>
+          <ul>
+            <li>DBFlute Runtime: terminateLast...() of CallbackContext</li>
+            <li>DBFlute Runtime: DfMapStyle@resolvePotentialMapOfBuildingMapString()</li>
+            <li>DBFlute Runtime: make option, SpecifyColumnRequired warning only</li>
+            <li>DBFlute Engine: make BehaviorCommandMeta@getEntityList()</li>
+            <li>DBFlute Engine: improve exception message of wrong JDBC type <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: quit FreeGen cls codeOf() deprecated (for internal use) <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: FreeGen cls can be isSuppressDBClsCollaboration <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: SimpleCDef option as DBFlute Classification <span class="frm">*前回パッチ</span></li>
+          </ul>
+          <h3>BUG</h3>
+          <ul>
+          </ul>
+        </div>
+      </div>
+      <div class="release">
         <h2>DBFlute-1.1.9 <span class="frm">※Java8</span></h2>
         <p class="releas5date">2019/01/01</p>
         <div class="new">
