--- a/web/ja/lastaflute/howto/upgrade/lachangelog.html
+++ b/web/ja/lastaflute/howto/upgrade/lachangelog.html
@@ -29,6 +29,16 @@
 	${indexlist}
 
       <div class="release">
+        <h2>LastaFlute-1.1.2</h2>
+        <p class="releas5date">2019/04/xx</p>
+        <div class="new">
+          <h3>NEW</h3>
+          <ul>
+            <li>[Lasta Di] can specify script engine name in lasta_di.properties for e.g. sai</li>
+          </ul>
+        </div>
+      </div>
+      <div class="release">
         <h2>LastaFlute-1.1.1</h2>
         <p class="releas5date">2019/02/03</p>
         <div class="new">
