add changelog of LastaFlute currectly

--- a/web/ja/lastaflute/howto/upgrade/lachangelog.html
+++ b/web/ja/lastaflute/howto/upgrade/lachangelog.html
@@ -34,6 +34,7 @@
         <div class="new">
           <h3>NEW</h3>
           <ul>
+            <li>JsonDebugChallenge should not depend on field naming strategy</li>
             <li>[Lasta Di] can specify script engine name in lasta_di.properties for e.g. sai</li>
           </ul>
         </div>
