add supplement to section2

--- a/web/ja/tutorial/handson/section02.html
+++ b/web/ja/tutorial/handson/section02.html
@@ -290,6 +290,11 @@ PROJECT_ROOT
 				<li>会員IDが 1 であることをアサート</li>
 			</ul>
 		</dd>
+		<dd>
+			<span class="frm">
+				※修行++: 試しに一時的に会員IDを99999で検索して、発生する例外のメッセージを読んでみましょう。ぜひ、DBFluteの例外メッセージの特徴を知りましょう。
+			</span>
+		</dd>
 		<!-- IsNull, OrderBy Desc -->
 		<dt>生年月日がない会員を検索</dt>
 		<dd>
